[package]
name = "teleporter"
version = "0.10.2"
authors = ["geno nullfree <nullfree.geno@gmail.com>"]
license = "BSD-3-Clause"
description = "A small utility to send files quickly from point A to point B"
readme = "README.md"
homepage = "https://github.com/genonullfree/teleporter.git"
repository = "https://github.com/genonullfree/teleporter.git"
keywords = ["netcat", "teleport", "teleporter", "transfer", "send"]
categories = ["command-line-utilities", "network-programming"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.0", features = ["derive"] }
byteorder = "1.4.3"
xxhash-rust = { version = "0.8.2", features = ["xxh3"] }
aes-gcm = "0.10.1"
generic-array = "0.14.4"
x25519-dalek = "1.2.0"
semver = "1.0.4"
rand = "0.7.3"
deku = "0.15"
thiserror = "1.0.35"

[profile.size]
inherits = "release"
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
