[package]
name = "teleporter"
version = "0.10.8"
authors = ["geno nullfree <nullfree.geno@gmail.com>"]
license = "BSD-3-Clause"
description = "A small utility to send files quickly from point A to point B"
readme = "README.md"
homepage = "https://github.com/genonullfree/teleporter.git"
repository = "https://github.com/genonullfree/teleporter.git"
keywords = ["netcat", "teleport", "teleporter", "transfer", "send"]
categories = ["command-line-utilities", "network-programming"]
edition = "2021"
rust-version = "1.64.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "teleporter"
path = "src/lib.rs"

[[bin]]
name = "teleporter"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
byteorder = "1.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
aes-gcm = "0.10"
generic-array = "0.14"
x25519-dalek = "1.2"
semver = "1.0"
rand = "0.7"
thiserror = "1.0"
pnet = "0.33.0"
pnet_datalink = "0.33.0"
ipnetwork = "0.20.0"

[profile.size]
inherits = "release"
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
